--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.wapp_sticker_store">
-
     <application
         android:name=".StickerApplication"
         android:allowBackup="false"
@@ -13,11 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".EntryActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".EntryActivity"
+            android:parentActivityName=".EntryActivity"
+            tools:ignore="UnusedAttribute">
+            <meta-data
+                android:name="android.intent.action.PARENT_ACTIVITY"
+                android:value="com.example.wapp_sticker_store.EntryActivity" />
         </activity>
         <activity android:name=".StickerPackListActivity" />
         <activity
